fix legibility title in hero-unit

--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -13,8 +13,15 @@
     padding: 2.4rem 2.4rem;
   }
 
+  .header-hero {
+    background-color: rgba(0, 0, 0, .3);
+    padding: 2.4rem;
+  }
+
+
+
   h1 {
-    margin-top: -10rem;
+    //margin-top: -10rem;
     color: $color-white;
     font-size: 3.6rem;
     letter-spacing: 1rem;
